--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,17 @@ before_install:
     - sudo apt-get update
     - sudo apt-get install -y lua-check
 
-script: luacheck .
+jobs:
+    include:
+        - script: luacheck .
+        - stage: GitHub Release
+          script: ./build.sh
+          deploy:
+              provider: releases
+              api_key: "$GITHUB_OAUTH_TOKEN"
+              file_glob: true
+              file: dist/*
+              draft: true
+              skip_cleanup: true
+              on:
+                  branch: master
