--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ language: generic
 dist: bionic
 
 before_install:
+    - sudo add-apt-repository -y ppa:bartbes/love-stable
     - sudo apt-get update
-    - sudo apt-get install -y lua-check
+    - sudo apt-get install -y lua-check love mercurial
 
 jobs:
     include:
