--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ jobs:
               draft: true
               skip_cleanup: true
               on:
-                  branch: master
+                  tags: true
